# mielophone

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
brainbit/: Cargo.toml
brainbit/src/: bbit.rs  lib.rs
brainbit/src/bbit/: control.rs  device.rs  eeg_uuids.rs  errors.rs  internals.rs  mod.rs  responses.rs  results.rs  sealed.rs  traits.rs
console/: Cargo.toml
console/src/: main.rs
core-lib/: Cargo.toml
core-lib/src/: device.rs
core-lib/src/ble_util/: mod.rs
core-lib/src/netech/: device.rs  gatt_info.rs
core_lib/: Cargo.toml
core_lib/src/: lib.rs
core_lib/src/brain_bit/: mod.rs
core_lib/src/colibri/: colibri_constants.rs
docs/: dev_info.md
examples/async_trait_update/: Cargo.toml
examples/battery_level/: Cargo.toml
examples/battery_level/src/: main.rs
examples/connect/: Cargo.toml
examples/connect/src/: main.rs
handler/: Cargo.toml
handler/src/: main_handler.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/bbit/: constants.rs  control.rs  device.rs  eeg_uuids.rs  mod.rs  resist.rs  responses.rs  sealed.rs
lib/src/netech/: gatt_info.rs
mainapp/: Cargo.toml
mainapp/src/: main.rs
