# Vitrial workspace now
[workspace]
members = [
    "mainapp",
    "brainbit",
    "handler",
    "examples/connect",
    "examples/battery_level",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Yuriy Larin <yuriy.larin@gmail.com>"]
edition = "2021"
repository = "https://github.com/blandger/mielophone"

[workspace.dependencies]
btleplug = { version = "0.11.0", features = ["serde"] }
#btleplug = { path = "../btleplug-blandger" }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

color-eyre = "0.6.2"
chrono = "0.4.25"

#[build]
#rustflags = ["-C", "link-args=-gz"] #zip debug data