# Vitrial workspace now
[workspace]
members = [
    "mainapp",
    "brainbit",
    "handler",
    "examples/connect",
    "examples/battery_level",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Yuriy Larin <yuriy.larin@gmail.com>"]
edition = "2021"
repository = "https://github.com/blandger/mielophone"

[workspace.dependencies]
btleplug = { version = "0.11.5", features = ["serde"] }
#btleplug = { path = "../btleplug-blandger" }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.77"
futures = "0.3.30"
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = "1.7.0"
thiserror = "1.0.56"

color-eyre = "0.6.2"
chrono = "0.4.33"

#[build]
#rustflags = ["-C", "link-args=-gz"] #zip debug data