# Vitrial workspace now
[workspace]
members = [
    "mainapp",
    "brainbit",
    "handler",
    "examples/connect",
    "examples/battery_level",
    "examples/async_trait_update",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Yuriy Larin <yuriy.larin@gmail.com>"]
edition = "2021"
repository = "https://github.com/blandger/mielophone"

[workspace.dependencies]
btleplug = { version = "0.11.7", features = ["serde"] }
#btleplug = { path = "../btleplug-blandger" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.83"
futures = "0.3.31"
uuid = "1.11"
thiserror = "2.0.9"

color-eyre = "0.6.3"
chrono = "0.4.39"

#[build]
#rustflags = ["-C", "link-args=-gz"] #zip debug data
