[package]
name = "brainbit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
edition.repository = true
description = "Library wrapper above BLE to support BrainBit device only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
btleplug = { workspace = true, features = ["serde"] }

thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait.workspace = true
futures.workspace = true