[package]
name = "core-lib"
version = "0.1.0"
authors = ["Yuriy Larin <yuriy.larin@gmail.com>"]
edition = "2018"
description = "Library wrapper above BLE to support limited device list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.4.2"
async-std = { version = "1.5.0", features = ["unstable"] }
uuid = "0.8"