[package]
name = "handler"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
edition.repository = true
description = "Data handler code, calculations, resistance check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainbit = { path = "../brainbit" }
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
chrono.workspace = true
async-trait.workspace = true
