[package]
name = "lib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
edition.repository = true
description = "Library wrapper above BLE to support BrainBit device (for now)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.68"
futures = "0.3"
btleplug = { workspace = true, features = ["serde"] }

thiserror = "1.0.40"
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
uuid = "1.3.3"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
