[package]
name = "mainapp"
version = "0.1.0"
authors = ["Yuriy Larin <yuriy.larin@gmail.com>"]
edition = "2021"
description = "Console client app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { version = "0.1.0", path = "../lib" }
btleplug = { version = "0.10.5", features = ["serde"] }

tokio = { version = "1.28.2", features = ["full"] }
#tokio-stream = { version = "0.1.11", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
color-eyre = "0.6.2"