[package]
name = "mainapp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Console client app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { version = "0.1.0", path = "../brainbit" }

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

color-eyre.workspace = true
chrono.workspace = true