[package]
name = "battery_level"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Subscribe on BBit device status changes including battery level"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { version = "0.1.0", path = "../../lib" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

color-eyre.workspace = true
chrono.workspace = true