[package]
name = "battery_level"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Subscribe on BBit device status changes including battery level"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainbit = { version = "0.1.0", path = "../../brainbit" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

color-eyre.workspace = true
chrono.workspace = true